FIx focus shift
Fixed issue where focus shifted to input field after selecting item with keyboard. Possibly also fixed weird focus border on zoomed out screens?

--- a/packages/css/src/formElements/combobox/combobox.css
+++ b/packages/css/src/formElements/combobox/combobox.css
@@ -63,6 +63,7 @@
 }
 .md-combobox__input--before {
   position: absolute;
+  display: flex;
   top: 50%;
   left: 0.75rem;
   color: var(--mdPrimaryColor);
@@ -79,7 +80,7 @@
   gap: 0.5rem;
   color: var(--mdPrimaryColor);
   transform: translateY(-50%);
-  /* pointer-events: none; */
+  pointer-events: none;
 }
 .md-combobox__input--after svg {
   width: 1rem;
